@@ -19,6 +19,7 @@
 			insideClick = true; // prevents immidiate closing
 			currentOpenCtrlId = null;
 			xcube_alignElement(elm, elmTbl);
+			xcube_hideElement("SELECT", elm);
 			elm.style.display = "inline";
 			elm.innerHTML = "Loading......";
 			
@@ -209,6 +210,7 @@
 			if (elm) {
 				elm.style.display = "none";
 				elm.innerHTML = "...";
+				xcube_showElement("SELECT", elm);
 			}
 			currentOpenCtrlId = null;
 		}
@@ -237,3 +239,65 @@
 		elmSrc.style.top = y + "px";
 
 	}
+	
+    function xcube_hideElement( elmID, overDiv )
+    {
+      if( document.all ) // IE only
+      {
+        for( i = 0; i < document.all.tags( elmID ).length; i++ )
+        {
+          obj = document.all.tags( elmID )[i];
+          if( !obj || !obj.offsetParent )
+          {
+            continue;
+          }
+      
+          // Find the element's offsetTop and offsetLeft relative to the BODY tag.
+          objLeft   = obj.offsetLeft;
+          objTop    = obj.offsetTop;
+          objParent = obj.offsetParent;
+          
+          while( objParent.tagName.toUpperCase() != "BODY" )
+          {
+            objLeft  += objParent.offsetLeft;
+            objTop   += objParent.offsetTop;
+            objParent = objParent.offsetParent;
+          }
+      
+          objHeight = obj.offsetHeight;
+          objWidth = obj.offsetWidth;
+      
+          if(( overDiv.offsetLeft + overDiv.offsetWidth ) <= objLeft );
+          else if(( overDiv.offsetTop + overDiv.offsetHeight ) <= objTop );
+          else if( overDiv.offsetTop >= ( objTop + objHeight ));
+          else if( overDiv.offsetLeft >= ( objLeft + objWidth ));
+          else
+          {
+            obj.style.visibility = "hidden";
+          }
+        }
+      }
+    }
+     
+    /*
+    * unhides <select> and <applet> objects (for IE only)
+    */
+    function xcube_showElement( elmID )
+    {
+      if( document.all ) // IE only
+      {
+        for( i = 0; i < document.all.tags( elmID ).length; i++ )
+        {
+          obj = document.all.tags( elmID )[i];
+          
+          if( !obj || !obj.offsetParent )
+          {
+            continue;
+          }
+        
+          obj.style.visibility = "";
+        }
+      }
+    }
+
+	
